# typesense-django

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  tests.yml
server/: settings.py  urls.py
typesense_django/: asgi.py  settings.py  urls.py  wsgi.py
typesense_integration/: apps.py  collection.py  models.py  types.py
typesense_integration/common/: utils.py  validations.py
typesense_integration/tests/collections/: models.py  tests.py
typesense_integration/tests/collections/default_sorting_field/: tests.py
typesense_integration/tests/collections/detailed_relations/: tests.py
typesense_integration/tests/collections/explicit_fields/: tests.py
typesense_integration/tests/collections/facets/: tests.py
typesense_integration/tests/collections/geopoints/: tests.py
typesense_integration/tests/collections/joins/: tests.py
typesense_integration/tests/collections/model_validation/: tests.py
typesense_integration/tests/collections/optional_fields/: tests.py
typesense_integration/tests/collections/override_id/: tests.py
typesense_integration/tests/collections/relations/: tests.py
typesense_integration/tests/collections/schema_generation/: tests.py
typesense_integration/tests/collections/skip_index_fields/: tests.py
typesense_integration/tests/collections/sort_fields/: tests.py
typesense_integration/tests/schema_validation/: models.py  tests.py
