[tool.poetry]
name = "typesense-django"
version = "0.1.0"
description = ""
authors = ["Fanis Tharropoulos <ftharropoulos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
typesense = "^0.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
wemake-python-styleguide = "^0.19"
flake8-bugbear = "^24.4.26"
pillow = "^10.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
